@@ -31,7 +31,7 @@ import org.junit.jupiter.params.provider.ValueSource;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
@@ -42,7 +42,7 @@ public class RuntimeLoggerManagerTest {
 
     @Test
     public void testValidateSetLogLevelConfig() {
-        MANAGER.validateLogLevelConfigs(Arrays.asList(new AlterableConfig().
+        MANAGER.validateLogLevelConfigs(List.of(new AlterableConfig().
             setName(LOG.getName()).
             setConfigOperation(OpType.SET.id()).
             setValue("TRACE")));
@@ -50,7 +50,7 @@ public class RuntimeLoggerManagerTest {
 
     @Test
     public void testValidateDeleteLogLevelConfig() {
-        MANAGER.validateLogLevelConfigs(Arrays.asList(new AlterableConfig().
+        MANAGER.validateLogLevelConfigs(List.of(new AlterableConfig().
             setName(LOG.getName()).
             setConfigOperation(OpType.DELETE.id()).
             setValue("")));
@@ -62,7 +62,7 @@ public class RuntimeLoggerManagerTest {
         OpType opType = AlterConfigOp.OpType.forId(id);
         assertEquals(opType + " operation is not allowed for the BROKER_LOGGER resource",
             Assertions.assertThrows(InvalidRequestException.class,
-                () -> MANAGER.validateLogLevelConfigs(Arrays.asList(new AlterableConfig().
+                () -> MANAGER.validateLogLevelConfigs(List.of(new AlterableConfig().
                     setName(LOG.getName()).
                     setConfigOperation(id).
                     setValue("TRACE")))).getMessage());
@@ -73,7 +73,7 @@ public class RuntimeLoggerManagerTest {
         assertEquals("Cannot set the log level of " + LOG.getName() + " to BOGUS as it is not " +
             "a supported log level. Valid log levels are DEBUG, ERROR, FATAL, INFO, TRACE, WARN",
             Assertions.assertThrows(InvalidConfigurationException.class,
-                () -> MANAGER.validateLogLevelConfigs(Arrays.asList(new AlterableConfig().
+                () -> MANAGER.validateLogLevelConfigs(List.of(new AlterableConfig().
                     setName(LOG.getName()).
                     setConfigOperation(OpType.SET.id()).
                     setValue("BOGUS")))).getMessage());
@@ -81,7 +81,7 @@ public class RuntimeLoggerManagerTest {
 
     @Test
     public void testValidateSetRootLogLevelConfig() {
-        MANAGER.validateLogLevelConfigs(Arrays.asList(new AlterableConfig().
+        MANAGER.validateLogLevelConfigs(List.of(new AlterableConfig().
                 setName(LoggingController.ROOT_LOGGER()).
                 setConfigOperation(OpType.SET.id()).
                 setValue("TRACE")));
@@ -92,7 +92,7 @@ public class RuntimeLoggerManagerTest {
         assertEquals("Removing the log level of the " + LoggingController.ROOT_LOGGER() +
             " logger is not allowed",
             Assertions.assertThrows(InvalidRequestException.class,
-                () -> MANAGER.validateLogLevelConfigs(Arrays.asList(new AlterableConfig().
+                () -> MANAGER.validateLogLevelConfigs(List.of(new AlterableConfig().
                     setName(LoggingController.ROOT_LOGGER()).
                     setConfigOperation(OpType.DELETE.id()).
                     setValue("")))).getMessage());
